helix/test/corpus/error_handling.txt
================================================================================
Fallible function
================================================================================

fn might_fail() -> int or err {
    return 42;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    return_type: (return_type
      (primitive_type))
    body: (block
      (return_statement
        value: (integer_literal)))))

================================================================================
Fail expression with string
================================================================================

fn fail_with_message() -> int or err {
    fail "something went wrong";
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    return_type: (return_type
      (primitive_type))
    body: (block
      (expression_statement
        (fail_expression
          (string_literal))))))

================================================================================
Fail expression with error type
================================================================================

fn fail_with_type() -> int or err {
    fail NetworkError { code: 500, message: "server error" };
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    return_type: (return_type
      (primitive_type))
    body: (block
      (expression_statement
        (fail_expression
          (struct_instantiation
            type: (identifier)
            (field_initializer
              name: (identifier)
              value: (integer_literal))
            (field_initializer
              name: (identifier)
              value: (string_literal))))))))

================================================================================
Or return expression
================================================================================

fn test() {
    x := might_fail() or return;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (variable_declaration
        name: (identifier)
        value: (or_expression
          (call_expression
            function: (identifier)
            arguments: (argument_list)))))))

================================================================================
Or match expression
================================================================================

fn test() or err {
    x := might_fail() or match err {
        NetworkError => 0,
        _ => fail err
    };
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    return_type: (return_type
      (primitive_type))
    body: (block
      (variable_declaration
        name: (identifier)
        value: (or_expression
          (call_expression
            function: (identifier)
            arguments: (argument_list))
          (match_expression
            (match_arm
              pattern: (identifier)
              (integer_literal))
            (match_arm
              pattern: (identifier))))))))
